<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">npr</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="programs">Programs</string>
    <string name="topics">Topics</string>
    <string name="favorites">Favorites</string>
    <string name="exit">Exit</string>
    <string name="description">NPR</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="title_activity_stories">StoriesActivity</string>
    <string name="title_activity_story">StoryActivity</string>
    <string name="small_text">Small Text</string>

</resources>